# lockfile.nvim

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
doc/: lockfile.txt
lua/lockfile/: analyze.lua  config.lua  detect.lua  diff.lua  download.lua  git.lua  highlights.lua  init.lua  model.lua  native.lua  parse.lua  render.lua  semver.lua  ui.lua  util.lua  version.lua
lua/lockfile/parse/: cargo.lua  gosum.lua  init.lua  json.lua  npm.lua  pnpm.lua  poetry.lua  scanner.lua  toml.lua  uv.lua  yaml.lua  yarn.lua
plugin/: lockfile.lua
src/: git.rs  lib.rs  model.rs  version.rs
src/parse/: cargo.rs  gosum.rs  lazy.rs  mod.rs  npm.rs  pnpm.rs  poetry.rs  uv.rs  yarn.rs  yarn_classic.rs
tests/: analyze_spec.lua  diff_spec.lua  render_spec.lua  run.lua  semver_spec.lua  version_spec.lua
