[package]
name = "lockfile_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "lockfile_native"
crate-type = ["cdylib"]

[dependencies]
git2 = "0.21.0"
mlua = { version = "0.11.6", features = ["luajit", "module", "serialize"] }
nom = "8.0.0"
pep440_rs = "0.7.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
toml = "1.1.2"
